--- a/hugo.yaml
+++ b/hugo.yaml
@@ -11,7 +11,7 @@ permalinks:
   posts: "/posts/:filename/"
 
 params:
-  theme: "light-purple" # light-blue, dark-blue, light-green, light-yellow, light-pink, light-purple
+  theme: "dark-purple" # light-blue, dark-blue, light-green, light-yellow, light-pink, light-purple
   favicon: "/favicon.ico"
 
   read_more:
